<resources>
    <string name="app_name">Register to Learn English</string>
    <string name="action_settings">Settings</string>
    <string name="label_your_information">Your information</string>
    <string name="label_register">Register</string>
    <string name="label_name">Name: </string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_sex">Gender:</string>
    <string name="label_job">Job:</string>
    <string name="label_select_job">Select your job</string>
    <string name="label_phone">Phone:</string>
    <string name="label_email">Email:</string>
    <string name="label_register_learn">Register to learn English</string>
    <string name="label_tutor">Tutor:</string>
    <string name="label_course">Courses:</string>
    <string name="label_hour">Hour</string>
    <string name="label_tuition_fee">Tuition Fee</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_pay">Pay:</string>
    <string name="promt_job">Select your job</string>
    <string-array name="arr_job">
        <item>Student</item>
        <item>Worker</item>
        <item>Farmer</item>
        <item>Doctor</item>
        <item>Developer</item>
    </string-array>
    <string name="promt_tutor">Select Tutor</string>
    <string-array name="arr_tutor">
        <item>Đỗ Văn Kiệm</item>
        <item>Trang Linh</item>
        <item>Kevin</item>
        <item>Vân Anh</item>
        <item>Nancy</item>
    </string-array>
    <string name="promt_course">Select Course</string>
    <string-array name="arr_course">
        <item>TOEIC</item>
        <item>TOEFL</item>
        <item>Grammar</item>
        <item>Speak</item>
    </string-array>
    <string name="information">I need to learn English at Antoree</string>
    <string name="register_summary_email_subject">Registration: Learning English at Antoree</string>
    <string name="label_author">AUTHOR</string>
    <string name="label_reset">RESET</string>
    <string name="label_back">BACK</string>
    <string name="label_name_author">Trung Tran Nguyen</string>
    <string name="label_class_author">Class:</string>
    <string name="label_mentor">Mentor:</string>
    <string name="label_name_mentor">Tam Duc Tran</string>
    <string name="label_batch">Batch:</string>
    <string name="label_source_code">My source code:</string>
</resources>
