<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="false"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_your_information"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="350dp"
            android:layout_height="16dp"
            android:background="@color/colorBlue"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sex"
            android:textSize="20sp"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:text="@string/label_male"
            android:textSize="20sp"
            android:checked="true" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:text="@string/label_female"
            android:textSize="20sp"
        />


        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"


        />




        <Button
            android:id="@+id/submitOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_register" />
    </LinearLayout>
</ScrollView>